--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   shared_preferences: ^0.5.3+1
   font_awesome_flutter: ^8.8.1
   flutter_calendar_carousel: ^1.3.10
+  flutter_form_builder:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
